fix(UI): make all scrollbars app themed

--- a/src/components/dashboard/user-table/UserTable.scss
+++ b/src/components/dashboard/user-table/UserTable.scss
@@ -30,7 +30,7 @@
         }
 
         &::-webkit-scrollbar-thumb {
-            background-color: #39cdcc;
+            background: #39cdcc;
             border-radius: 999px;
         }
     }
