--- a/src/layouts/sidebar/Sidebar.scss
+++ b/src/layouts/sidebar/Sidebar.scss
@@ -24,7 +24,7 @@
     }
 
     &::-webkit-scrollbar-thumb {
-        background-color: #39cdcc;
+        background: #39cdcc;
         border-radius: 999px;
     }
 
